--- a/Space.css
+++ b/Space.css
@@ -1,7 +1,7 @@
 .space {
     width:100%;
     height:600px;
-    background-image: -webkit-linear-gradient(45deg, #30cfd0, #330867);
+    background-image: linear-gradient(45deg, #30cfd0, #330867);
     margin:20px;
     border-radius:5px;
     box-shadow:  -6px 4px 4px -4px rgba(34, 60, 80, 0.35) inset;
