--- a/Space.css
+++ b/Space.css
@@ -4,7 +4,7 @@
     background-image: linear-gradient(45deg, #30cfd0, #330867);
     margin:20px;
     border-radius:5px;
-    box-shadow:  -6px 4px 4px -4px rgba(34, 60, 80, 0.35) inset;
+    box-shadow:inset  -6px 4px 4px -4px rgba(34, 60, 80, 0.35) ;
     position:relative;
     overflow:hidden;
 }
